fix(style) - Add spacing to article in richtext

--- a/packages/styles/scss/components/_richtext.scss
+++ b/packages/styles/scss/components/_richtext.scss
@@ -41,6 +41,10 @@
     );
   }
 
+  article {
+    margin-bottom: spacing(14);
+  }
+
   iframe {
     margin-bottom: spacing(14);
   }
